--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -228,8 +228,10 @@
                     <li class="locate-coordinates">
                         Locate by coordinate
                     </li>
-                    {#                    Will be implemented in another PR #}
-                    {#                    <li id="locate-farm">Locate by Farm/Farm Portion Code Page</li>#}
+                    <li class="locate-farm">
+                        Locate by Farm/Farm Portion Code Page
+                    </li>
+                    {#                                        Will be implemented in another PR #}
                     {#                    <li id="map-navigation">Map navigation page</li>#}
                 </ul>
             </div>
@@ -250,26 +252,36 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <p>
+                        <p class="coordinate-form">
                             Please enter the decimal latitude (positive
                             degrees North) and longitude (positive degrees
                             East) coordinates of your area of interest below!
                         </p>
+                        <p class="farm-form">
+                            Please enter the Farm/Farm Portion ID below (e.g. T0KT00000000001600005)
+                        </p>
+
                         <form class="form-inline">
-                            <label for="longitude" class="sr-only">
+                            <label for="longitude" class="sr-only coordinate-form">
                                 Longitude
                             </label>
                             <input type="number" step="0.000001" min="-180"
                                    max="180"
-                                   class="form-control mb-2 mr-sm-2"
+                                   class="form-control mb-2 mr-sm-2 coordinate-form"
                                    id="longitude" placeholder="Longitude">
-                            <label for="latitude" class="sr-only">
+                            <label for="latitude" class="sr-only coordinate-form">
                                 Latitude
                             </label>
                             <input type="number" step="0.000001" max="90"
                                    min="-90"
-                                   class="form-control mb-2 mr-sm-2"
+                                   class="form-control mb-2 mr-sm-2 coordinate-form"
                                    id="latitude" placeholder="Latitude">
+                            <label for="farm-id" class="sr-only farm-form">
+                                Farm ID
+                            </label>
+                            <input type="text"
+                                   class="form-control mb-2 mr-sm-2 farm-form"
+                                   id="farm-id" placeholder="Farm ID">
                             <button id="go-button" type="button" class="btn
                             btn-outline-dark mb-2 mr-sm-2"
                             >Go
