--- a/bims/static/css/non_validated_list.css
+++ b/bims/static/css/non_validated_list.css
@@ -36,6 +36,10 @@ tr:nth-child(odd) {background: #f5f5f5}
     color: darkblue;
 }
 
+.ready-validate-action:hover a {
+    color: orange !important;
+}
+
 .site-link {
     color: cadetblue !important;
     cursor: pointer;
