--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -112,6 +112,7 @@
                         <input type="search" id="search" placeholder="Search..."><span class="search-arrow"><i class="fa fa-angle-right"></i></span>
                     </div>
                 </div>
+                <div id="search-error-text">Minimal 3 character or empty.</div>
             </div>
             <div class="row">
                 <div class="col-lg-12 search-info">
