--- a/bims/templates/non_validated_user_list.html
+++ b/bims/templates/non_validated_user_list.html
@@ -16,6 +16,7 @@
 
 {% block body_content %}
 <div style="min-height: 100%; height: auto;">
+    <div id="message-success" style="display: none; float: left; width: 100%; height: 50px"></div>
     <div class="container" style="text-align: center; margin-top: 25px; margin-bottom: 25px">
         <h1 class="title-heading">NONVALIDATED BIODIVERSITY RECORDS</h1>
     </div>
@@ -42,7 +43,7 @@
             <th>Collection Date</th>
             <th>Owner</th>
             <th>Action</th>
-            <th style="text-align: center !important;">Ready to Validate</th>
+            <th style="text-align: center !important;">Ready to be Validated</th>
         </tr>
         {% for obj in biorecords %}
             <tr>
@@ -55,7 +56,13 @@
                 <td>{{ obj.collection_date }}</td>
                 <td>{{ obj.owner }}</td>
                 <td class="edit-action"><a href="{% url 'update-records' obj.pk %}" class="btn btn-default" data-toggle="tooltip" title="Edit this object"><i class="fa fa-pencil"></i></a></td>
-                <td class="ready-validate-action" style="text-align: center !important;"><a onclick="sendEmailValidation({{ obj.pk }})" title="Send email notification to validator to review this object"><i class="fa fa-send"></i></a></td>
+                <td class="ready-validate-action" style="text-align: center !important;">
+                    {% if not obj.ready_for_validation %}
+                        <a onclick="sendEmailValidation({{ obj.pk }})" title="Send email notification to validator to review this object"><i class="fa fa-send"></i></a>
+                    {% else %}
+                        <a title="Notification to validator is sent"><i class="fa fa-thumbs-up"></i></a>
+                    {% endif %}
+                </td>
             </tr>
         {% endfor %}
     </table>
