--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -56,7 +56,7 @@
         <div class="ol-control" id="taxon-filter">
         </div>
         <div id="popup"></div>
-        <div id="map-legend-wrapper" class="control-drop-shadow hide-legend">
+        <div id="map-legend-wrapper" class="control-drop-shadow hide-legend" data-toggle="tooltip" data-placement="bottom" title="Show legends">
             <div id="map-legend-symbol">L</div>
             <div id="map-legend"></div>
         </div>
