update frontend layout

--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -258,6 +258,56 @@ html, body, .map, .map-wrapper, #map-container {
     margin-top: 60px;
 }
 
+.map-search-result {
+    margin-left: 351px !important;
+    padding-bottom: 0;
+}
+
+.map-search-result .search-box {
+    color: white;
+    padding-top: 10px;
+    font-weight: 700;
+    font-size: 16px;
+}
+
+#search-result-content {
+    margin-right: -15px;
+    margin-left: -15px;
+}
+
+#search-result-content .search-results-total {
+    background: ghostwhite;
+    padding-right: 15px;
+    padding-left: 15px;
+    padding-top: 0;
+    padding-bottom: 0;
+    font-weight: normal;
+    font-size: 16px;
+}
+
+#search-result-content .result-search {
+    font-size: 8pt;
+    text-align: left;
+    padding-left: 17px;
+    margin-bottom: 0;
+    padding-right: 17px;
+    background-color: white;
+    color: #4e4e4e;
+}
+
+#search-result-content .result-search:hover {
+    background: ghostwhite;
+}
+
+#search-result-content p {
+    margin-bottom: 0;
+}
+
+#search-result-content .search-results-section {
+    max-height: 500px;
+    overflow-y: scroll;
+}
+
 .layers-selector-container {
     display: none;
     padding-bottom: 0 !important;
@@ -370,6 +420,7 @@ html, body, .map, .map-wrapper, #map-container {
     font-size: 12pt;
     font-weight: bolder;
     line-height: 20px;
+    margin-right: 3px;
 }
 
 .map-control-panel-box .close-button:hover, .close-panel:hover {
