--- a/bims/templates/csv_uploader.html
+++ b/bims/templates/csv_uploader.html
@@ -28,39 +28,43 @@
             </div>
 
             <div class="modal-body">
-                <form id="upload-form" onchange="Validate(this)" method="post" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    <label for="file"><b>Upload csv here</b></label>
-                    <input type="file" name="csv_file">
-                    <p class="help-block">These formats are supported: csv</p>
-                    <div class="help-block">
-                        Your data must conform to this schema to be accepted :
-                        <div class="help-block-schema">
-                            {% block required_fields %}
-                                latitude(float), longitude(float), species_name(string), location_site(string), notes(string), category(string), date(yyyy-mm-dd), collector(string)
-                            {% endblock %}
-                        </div>
-                        <div class="help-block-space"></div>
-                        And these are optional fields :
-                        <div class="help-block-schema">
-                            {% block optional_fields %}
-                                present(int), absent(int)
-                            {% endblock %}
-                        </div>
+                <label for="file"><b>Upload csv here</b></label>
+                <button type="button" class="btn btn-primary js-upload-photos">
+                    <span class="glyphicon glyphicon-cloud-upload"></span> Upload CSV
+                </button>
+
+                <input id="fileupload" type="file" name="csv_file"
+                       style="display: none;"
+                       data-url=""
+                       data-form-data='{"csrfmiddlewaretoken": "{{ csrf_token }}"}'>
+
+                <div class="upload-status">
+                </div>
+
+                <div class="help-block-space"></div>
+                <p class="help-block">These formats are supported: csv</p>
+                <div class="help-block">
+                    Your data must conform to this schema to be accepted :
+                    <div class="help-block-schema">
+                        {% block required_fields %}
+                            latitude(float), longitude(float), species_name(string), location_site(string), notes(string), category(string), date(yyyy-mm-dd), collector(string)
+                        {% endblock %}
                     </div>
                     <div class="help-block-space"></div>
-                    <div class="help-block">
-                        Duplicates will be detected and rejected.
+                    And these are optional fields :
+                    <div class="help-block-schema">
+                        {% block optional_fields %}
+                            present(int), absent(int)
+                        {% endblock %}
                     </div>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button id="upload-file-btn" class="btn btn-primary" data-dismiss="modal" value="Upload">Upload</button>
+                </div>
+                <div class="help-block-space"></div>
+                <div class="help-block">
+                    Duplicates will be detected and rejected.
+                </div>
+
             </div>
 
-            {% if data.uploaded %}
-                <p> {{ data.uploaded }} </p>
-            {% endif %}
 
         </div>
     </div>
@@ -71,48 +75,33 @@
 
     <!-- Plugin JavaScript -->
     <script src="{% static "js/libs/jquery/jquery-3.3.1.min.js" %}"></script>
-    <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
-    <script src="{% static "js/libs/jquery-easing/jquery.easing.min.js" %}"></script>
-    <script src="{% static "js/libs/scrollreveal/scrollreveal.min.js" %}"></script>
-    <script src="{% static "js/libs/magnific-popup/jquery.magnific-popup.min.js" %}"></script>
+    <script src="{% static "js/libs/jquery-fileupload/vendor/jquery.ui.widget.js" %}"></script>
+    <script src="{% static "js/libs/jquery-fileupload/jquery.iframe-transport.js" %}"></script>
+    <script src="{% static "js/libs/jquery-fileupload/jquery.fileupload.js" %}"></script>
+    <script src="{% static "js/libs/jquery-fileupload/jquery.fileupload-process.js" %}"></script>
+    <script src="{% static "js/libs/jquery-fileupload/jquery.fileupload-validate.js" %}"></script>
 
     <script type="text/javascript">
-        var _validFileExtensions = [".csv"];
 
-        $('#upload-file-btn').click(function (e) {
-            $('.loading').show();
-            $('#upload-form').submit();
+        $(".js-upload-photos").click(function () {
+            $("#fileupload").click();
         });
 
-        function Validate(oForm) {
-            var arrInputs = oForm.getElementsByTagName("input");
-            var alertDiv = $('#csv-alert');
-            alertDiv.hide();
-            for (var i = 0; i < arrInputs.length; i++) {
-                var oInput = arrInputs[i];
-                if (oInput.type == "file") {
-                    var sFileName = oInput.value;
-                    if (sFileName.length > 0) {
-                        var blnValid = false;
-                        for (var j = 0; j < _validFileExtensions.length; j++) {
-                            var sCurExtension = _validFileExtensions[j];
-                            if (sFileName.substr(sFileName.length - sCurExtension.length, sCurExtension.length).toLowerCase() == sCurExtension.toLowerCase()) {
-                                blnValid = true;
-                                break;
-                            }
-                        }
-
-                        if (!blnValid) {
-                            alertDiv.html("Sorry, " + sFileName + " is invalid, allowed extensions are: " + _validFileExtensions.join(", "));
-                            alertDiv.show();
-                            oInput.value = '';
-                            return false;
-                        }
-                    }
+        $("#fileupload").fileupload({
+            acceptFileTypes: /(\.|\/)(csv)$/i,
+            dataType: 'json',
+            done: function (e, data) {
+                $('.js-upload-photos').show();
+                if (data.result) {
+                    $('.upload-status').html(data.result.message);
                 }
+            },
+            progressall: function (e, data) {
+                $('.js-upload-photos').hide();
+                $('.upload-status').html('Processing...');
+                $('.upload-status').show();
             }
-            return true;
-        }
+        });
 
     </script>
 
