clickable site on search result

--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -105,6 +105,7 @@ html, body, .map, .map-wrapper, #map-container {
 .right-panel-title {
     padding-top: 10px;
     padding-left: 0;
+    white-space: nowrap;
 }
 
 .close-panel {
