--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -34,7 +34,7 @@
         const csrfmiddlewaretoken = "{{ csrf_token }}";
         const biological_modules = "{{ biological_modules|safe }}";
         const is_logged_in = {% if user.is_authenticated  %} true {% else %} false {% endif %};
-        const filterFarmIDUrl = '{% url "filter-farm-id" 123456789 %}';
+        const filterFarmIDUrl = '{% url "filter-farm-id" %}';
         const getFarmUrl = '{% url "get-farm" 123456789 %}';
     </script>
 {% endblock %}
