--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -263,31 +263,39 @@
                             Please enter the Farm/Farm Portion ID below (e.g. T0KT00000000001600005)
                         </p>
 
-                        <form class="form-inline">
-                            <label for="longitude" class="sr-only coordinate-form">
-                                Longitude
-                            </label>
-                            <input type="number" step="0.000001" min="-180"
-                                   max="180"
-                                   class="form-control mb-2 mr-sm-2 coordinate-form"
-                                   id="longitude" placeholder="Longitude">
-                            <label for="latitude" class="sr-only coordinate-form">
-                                Latitude
-                            </label>
-                            <input type="number" step="0.000001" max="90"
-                                   min="-90"
-                                   class="form-control mb-2 mr-sm-2 coordinate-form"
-                                   id="latitude" placeholder="Latitude">
-                            <label for="farm-id" class="sr-only farm-form">
-                                Farm ID
-                            </label>
-                            <input type="text"
-                                   class="form-control mb-2 mr-sm-2 farm-form"
-                                   id="farm-id" placeholder="Farm ID">
-                            <button id="go-button" type="button" class="btn
-                            btn-outline-dark mb-2 mr-sm-2"
-                            >Go
-                            </button>
+                        <form id="locate-form">
+                            <div class="form-row">
+                                <div class="col-4 coordinate-form">
+                                    <label for="longitude" class="sr-only">
+                                        Longitude
+                                    </label>
+                                    <input type="number" step="0.000001" min="-180"
+                                            max="180" class="form-control mb-2 mr-sm-2"
+                                            id="longitude" placeholder="Longitude">
+                                </div>
+                                <div class="col-4 coordinate-form">
+                                    <label for="latitude" class="sr-only">
+                                        Latitude
+                                    </label>
+                                    <input type="number" step="0.000001" max="90"
+                                            min="-90"
+                                            class="form-control mb-2 mr-sm-2"
+                                            id="latitude" placeholder="Latitude">
+                                </div>
+                                <div class="col-6 farm-form">
+                                    <label for="farm-id" class="sr-only">
+                                        Farm ID
+                                    </label>
+                                    <input type="text"
+                                           class="form-control mb-2 mr-sm-2"
+                                           id="farm-id" placeholder="Farm ID">
+                                </div>
+                                <div class="col">
+                                    <button id="go-button" type="button" class="btn btn-outline-dark mb-2 mr-sm-2">
+                                        Go
+                                    </button>
+                                </div>
+                            </div>
                         </form>
                     </div>
                 </div>
