--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -34,6 +34,8 @@
         const csrfmiddlewaretoken = "{{ csrf_token }}";
         const biological_modules = "{{ biological_modules|safe }}";
         const is_logged_in = {% if user.is_authenticated  %} true {% else %} false {% endif %};
+        const filterFarmIDUrl = '{% url "filter-farm-id" %}';
+        const getFarmUrl = '{% url "get-farm" 123456789 %}';
     </script>
 {% endblock %}
 
@@ -243,8 +245,10 @@
                     <li class="locate-coordinates">
                         Locate by coordinate
                     </li>
-                    {#                    Will be implemented in another PR #}
-                    {#                    <li id="locate-farm">Locate by Farm/Farm Portion Code Page</li>#}
+                    <li class="locate-farm">
+                        Locate by Farm/Farm Portion Code Page
+                    </li>
+                    {#                                        Will be implemented in another PR #}
                     {#                    <li id="map-navigation">Map navigation page</li>#}
                 </ul>
             </div>
@@ -265,30 +269,48 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <p>
+                        <p class="coordinate-form">
                             Please enter the decimal latitude (positive
                             degrees North) and longitude (positive degrees
                             East) coordinates of your area of interest below!
                         </p>
-                        <form class="form-inline">
-                            <label for="longitude" class="sr-only">
-                                Longitude
-                            </label>
-                            <input type="number" step="0.000001" min="-180"
-                                   max="180"
-                                   class="form-control mb-2 mr-sm-2"
-                                   id="longitude" placeholder="Longitude">
-                            <label for="latitude" class="sr-only">
-                                Latitude
-                            </label>
-                            <input type="number" step="0.000001" max="90"
-                                   min="-90"
-                                   class="form-control mb-2 mr-sm-2"
-                                   id="latitude" placeholder="Latitude">
-                            <button id="go-button" type="button" class="btn
-                            btn-outline-dark mb-2 mr-sm-2"
-                            >Go
-                            </button>
+                        <p class="farm-form">
+                            Please enter the Farm/Farm Portion ID below (e.g. T0KT00000000001600005)
+                        </p>
+
+                        <form id="locate-form">
+                            <div class="form-row">
+                                <div class="col-4 coordinate-form">
+                                    <label for="longitude" class="sr-only">
+                                        Longitude
+                                    </label>
+                                    <input type="number" step="0.000001" min="-180"
+                                            max="180" class="form-control mb-2 mr-sm-2"
+                                            id="longitude" placeholder="Longitude">
+                                </div>
+                                <div class="col-4 coordinate-form">
+                                    <label for="latitude" class="sr-only">
+                                        Latitude
+                                    </label>
+                                    <input type="number" step="0.000001" max="90"
+                                            min="-90"
+                                            class="form-control mb-2 mr-sm-2"
+                                            id="latitude" placeholder="Latitude">
+                                </div>
+                                <div class="col-6 farm-form">
+                                    <label for="farm-id" class="sr-only">
+                                        Farm ID
+                                    </label>
+                                    <input type="text"
+                                           class="form-control mb-2 mr-sm-2"
+                                           id="farm-id" placeholder="Farm ID">
+                                </div>
+                                <div class="col">
+                                    <button id="go-button" type="button" class="btn btn-outline-dark mb-2 mr-sm-2">
+                                        Go
+                                    </button>
+                                </div>
+                            </div>
                         </form>
                     </div>
                 </div>
