--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -36,6 +36,7 @@
         const is_logged_in = {% if user.is_authenticated  %} true {% else %} false {% endif %};
         const filterFarmIDUrl = '{% url "filter-farm-id" %}';
         const getFarmUrl = '{% url "get-farm" 123456789 %}';
+        const ogcServerDefaultLocation = "{{ OGC_SERVER.default.LOCATION }}";
     </script>
 {% endblock %}
 
