--- a/deployment/ansible/development/roles/docker_compose/templates/docker-compose.override.yml.j2
+++ b/deployment/ansible/development/roles/docker_compose/templates/docker-compose.override.yml.j2
@@ -40,6 +40,10 @@ services:
 
       {% endfor %}
 
+    ports:
+      # for geoserver
+      - "{{ docker_port_forward.django.geoserver }}:8080"
+
   uwsgi:
     build:
       context: docker
