add update records view and non validated list view for all users (#171)
* add update records view and non validated list view for all users

* add location edit in form

* add requirement

* add ready to validate

* add title button

* add ready to validate field and query validator based on permissions

* fix indentation

* fix migrations

* update map depends upon selected location site

* fix migrations

* fix url

--- a/bims/static/css/non_validated_list.css
+++ b/bims/static/css/non_validated_list.css
@@ -23,8 +23,21 @@ tr:nth-child(odd) {background: #f5f5f5}
     color: orange
 }
 
+.edit-action a {
+    text-align: center;
+    color: cadetblue;
+}
+
 .validate-action:hover {
     color: #1b900d;
+}
+
+.edit-action:hover a {
+    color: darkblue;
+}
+
+.ready-validate-action:hover a {
+    color: orange !important;
 }
 
 .site-link {
@@ -75,4 +88,27 @@ tr:nth-child(odd) {background: #f5f5f5}
 select {
     background: none;
     border: 1px solid gainsboro;
+}
+
+.form-wrapper {
+    border: 1px solid gainsboro;
+    padding: 25px;
+    border-radius: 2px;
+}
+
+#message-success {
+    background: #eaffe8 !important;
+    border: 1px solid #1b900d !important;
+    border-radius: 5px;
+    text-align: center !important;
+    position: fixed;
+    top: 0;
+    left: 0;
+    font-size: 20pt;
+    line-height: 50px;
+}
+
+
+#map {
+    min-height: 500px;
 }
