--- a/bims/templates/non_validated_user_list.html
+++ b/bims/templates/non_validated_user_list.html
@@ -2,7 +2,7 @@
 {% load static from staticfiles %}
 
 {% block title %}
-    Validation
+    Nonvalidated Records
 {% endblock %}
 
 {% block head %}
@@ -16,6 +16,7 @@
 
 {% block body_content %}
 <div style="min-height: 100%; height: auto;">
+    <div id="message-success" style="display: none; float: left; width: 100%; height: 50px"></div>
     <div class="container" style="text-align: center; margin-top: 25px; margin-bottom: 25px">
         <h1 class="title-heading">NONVALIDATED BIODIVERSITY RECORDS</h1>
     </div>
@@ -25,7 +26,6 @@
                 <option value=""></option>
                 <option value="original_species_name">original species name</option>
                 <option value="collection_date">collection date</option>
-                <option value="owner">owner</option>
             </select>
             <input type="text" class="input-options original_species_name" name="original_species_name" style="display: none">
             <input type="date" class="input-options collection_date" name="date_from" style="display: none"><span class="input-options collection_date" style="display: none"> to </span><input type="date" class="input-options collection_date" name="date_to" style="display: none">
@@ -42,7 +42,8 @@
             <th>Category</th>
             <th>Collection Date</th>
             <th>Owner</th>
-            <th>Validation Action</th>
+            <th>Action</th>
+            <th style="text-align: center !important;">Ready to be Validated</th>
         </tr>
         {% for obj in biorecords %}
             <tr>
@@ -54,7 +55,14 @@
                 <td>{{ obj.category }}</td>
                 <td>{{ obj.collection_date }}</td>
                 <td>{{ obj.owner }}</td>
-                <td class="validate-action"><a onclick="validateObject({{ obj.pk }})" class="btn btn-default" data-toggle="tooltip" title="Validate this object"><i class="fa fa-check-circle"></i></a></td>
+                <td class="edit-action"><a href="{% url 'update-records' obj.pk %}" class="btn btn-default" data-toggle="tooltip" title="Edit this object"><i class="fa fa-pencil"></i></a></td>
+                <td class="ready-validate-action" style="text-align: center !important;">
+                    {% if not obj.ready_for_validation %}
+                        <a onclick="sendEmailValidation({{ obj.pk }})" title="Send email notification to validator to review this object"><i class="fa fa-send"></i></a>
+                    {% else %}
+                        <a title="Notification to validator is sent"><i class="fa fa-thumbs-up"></i></a>
+                    {% endif %}
+                </td>
             </tr>
         {% endfor %}
     </table>
@@ -68,25 +76,25 @@
     {% if is_paginated %}
         <div class="container pagination">
             <span class="page-links">
-                    <a href="/nonvalidated-list/?page=1{{ custom_url }}">&laquo; first</a>
+                    <a href="/nonvalidated-user-list/?page=1{{ custom_url }}">&laquo; first</a>
                 {% if page_obj.has_previous %}
-                    <a href="/nonvalidated-list/?page={{ page_obj.previous_page_number }}{{ custom_url }}">previous</a>
+                    <a href="/nonvalidated-user-list/?page={{ page_obj.previous_page_number }}{{ custom_url }}">previous</a>
                 {% endif %}
                 {% for page in page_obj.paginator.page_range %}
                     {% if page == page_obj.number %}
                         <span class="page-current">
-                            <a href="/nonvalidated-list/?page={{ page_obj.number }}{{ custom_url }}">{{ page_obj.number }}</a>
+                            <a href="/nonvalidated-user-list/?page={{ page_obj.number }}{{ custom_url }}">{{ page_obj.number }}</a>
                         </span>
                     {% elif page > page_obj.number|add:'-3' and page < page_obj.number|add:'3' %}
                         <span>
-                            <a href="/nonvalidated-list/?page={{ page }}{{ custom_url }}">{{ page }}</a>
+                            <a href="/nonvalidated-user-list/?page={{ page }}{{ custom_url }}">{{ page }}</a>
                         </span>
                     {% endif %}
                 {% endfor %}
                 {% if page_obj.has_next %}
-                    <a href="/nonvalidated-list/?page={{ page_obj.next_page_number }}{{ custom_url }}">next</a>
+                    <a href="/nonvalidated-user-list/?page={{ page_obj.next_page_number }}{{ custom_url }}">next</a>
                 {% endif %}
-                    <a href="/nonvalidated-list/?page={{ page_obj.paginator.num_pages }}{{ custom_url }}">last &raquo;</a>
+                    <a href="/nonvalidated-user-list/?page={{ page_obj.paginator.num_pages }}{{ custom_url }}">last &raquo;</a>
             </span>
         </div>
     {% endif %}
@@ -97,7 +105,7 @@
         <div class="row">
             <div class="col-lg-10 pull-left kartoza-icon">
                 <a href="http://kartoza.com/en/">
-                    <img src="{% static 'img/kartoza-logo-only.png' %}" style="width: 55px">
+                    <img src="{% static '/img/kartoza-logo-only.png' %}" style="width: 55px">
                 </a>
             </div>
             <div class="col-lg-2 pull-right about-links">
@@ -114,7 +122,7 @@
     <script>
         var validateUrl = '{% url "validate-object" %}';
         var customUrl = '{{ custom_url }}';
-        var pageUrl = '/nonvalidated-list/';
+        var pageUrl = '/nonvalidated-user-list/';
     </script>
     <script src="{% static 'js/views/map-review-validation.js' %}"></script>
 {% endblock %}
