--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -34,6 +34,8 @@
         const csrfmiddlewaretoken = "{{ csrf_token }}";
         const biological_modules = "{{ biological_modules|safe }}";
         const is_logged_in = {% if user.is_authenticated  %} true {% else %} false {% endif %};
+        const filterFarmIDUrl = '{% url "filter-farm-id" %}';
+        const getFarmUrl = '{% url "get-farm" 123456789 %}';
     </script>
 {% endblock %}
 
@@ -64,31 +66,18 @@
 
     <script type='text/html' id='side-panel-template'>
         <div class="right-panel">
-            <div class="right-panel-header">
-                <div class="pull-right">
-                    <i class="fa fa-times close-panel"></i>
-                </div>
-                <div class="row">
-                    <div class="col-lg-10">
-                        <span class="title-side-panel">Search Results:</span> <br><span class="right-panel-title"></span>
-                    </div>
-                </div>
-            </div>
-            <div class="search-result-info">
-                Select an item to find more detailed information.
-            </div>
             <div class="row side-panel side-panel-info">
                 <div class="col-lg-12" id="content-panel">
                 </div>
             </div>
-            <div class="row side-panel panel-loading">
-                <img src="{% static "img/small-loading.svg" %}" alt="Loading view">
-            </div>
-            <div class="row side-panel panel-icons">
-            </div>
-            <div id="geocontext-information-container" class="row side-panel">
-                <img src="{% static "img/small-loading.svg" %}" alt="Loading view">
-                <div class="content">
+            <div class="right-panel-header">
+                <div class="pull-right" style="padding-top: 5px;">
+                    <i class="fa fa-times close-panel"></i>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <span class="right-panel-title"></span>
+                    </div>
                 </div>
             </div>
         </div>
@@ -256,8 +245,10 @@
                     <li class="locate-coordinates">
                         Locate by coordinate
                     </li>
-                    {#                    Will be implemented in another PR #}
-                    {#                    <li id="locate-farm">Locate by Farm/Farm Portion Code Page</li>#}
+                    <li class="locate-farm">
+                        Locate by Farm/Farm Portion Code Page
+                    </li>
+                    {#                                        Will be implemented in another PR #}
                     {#                    <li id="map-navigation">Map navigation page</li>#}
                 </ul>
             </div>
@@ -278,30 +269,48 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <p>
+                        <p class="coordinate-form">
                             Please enter the decimal latitude (positive
                             degrees North) and longitude (positive degrees
                             East) coordinates of your area of interest below!
                         </p>
-                        <form class="form-inline">
-                            <label for="longitude" class="sr-only">
-                                Longitude
-                            </label>
-                            <input type="number" step="0.000001" min="-180"
-                                   max="180"
-                                   class="form-control mb-2 mr-sm-2"
-                                   id="longitude" placeholder="Longitude">
-                            <label for="latitude" class="sr-only">
-                                Latitude
-                            </label>
-                            <input type="number" step="0.000001" max="90"
-                                   min="-90"
-                                   class="form-control mb-2 mr-sm-2"
-                                   id="latitude" placeholder="Latitude">
-                            <button id="go-button" type="button" class="btn
-                            btn-outline-dark mb-2 mr-sm-2"
-                            >Go
-                            </button>
+                        <p class="farm-form">
+                            Please enter the Farm/Farm Portion ID below (e.g. T0KT00000000001600005)
+                        </p>
+
+                        <form id="locate-form">
+                            <div class="form-row">
+                                <div class="col-4 coordinate-form">
+                                    <label for="longitude" class="sr-only">
+                                        Longitude
+                                    </label>
+                                    <input type="number" step="0.000001" min="-180"
+                                            max="180" class="form-control mb-2 mr-sm-2"
+                                            id="longitude" placeholder="Longitude">
+                                </div>
+                                <div class="col-4 coordinate-form">
+                                    <label for="latitude" class="sr-only">
+                                        Latitude
+                                    </label>
+                                    <input type="number" step="0.000001" max="90"
+                                            min="-90"
+                                            class="form-control mb-2 mr-sm-2"
+                                            id="latitude" placeholder="Latitude">
+                                </div>
+                                <div class="col-6 farm-form">
+                                    <label for="farm-id" class="sr-only">
+                                        Farm ID
+                                    </label>
+                                    <input type="text"
+                                           class="form-control mb-2 mr-sm-2"
+                                           id="farm-id" placeholder="Farm ID">
+                                </div>
+                                <div class="col">
+                                    <button id="go-button" type="button" class="btn btn-outline-dark mb-2 mr-sm-2">
+                                        Go
+                                    </button>
+                                </div>
+                            </div>
                         </form>
                     </div>
                 </div>
@@ -444,6 +453,27 @@
         <div class="result-search" data-search-result-id="">
             <p class="group-title"><%= name %></p>
             <a class="group-description"><%= count %> records found</a>
+        </div>
+    </script>
+    <script type="text/template" id="species-template">
+        <div class="content">
+            <div class="iucn-status"><span class="name"><%= iucn_status_name %></span><span class="full-name"><%= iucn_status_full_name %></span></div>
+            <div class="species-count"><b><%= count %></b><br> records</div>
+            <div class="taxonomy-system">
+                <%= kingdom %><br>
+                <i class="fa fa-arrow-down"></i><br>
+                <%= phylum %><br>
+                <i class="fa fa-arrow-down"></i><br>
+                <%= taxon_class %><br>
+                <i class="fa fa-arrow-down"></i><br>
+                <%= order %><br>
+                <i class="fa fa-arrow-down"></i><br>
+                <%= family %><br>
+                <i class="fa fa-arrow-down"></i><br>
+                <%= genus %><br>
+                <i class="fa fa-arrow-down"></i><br>
+                <%= species %>
+            </div>
         </div>
     </script>
 
