--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -159,6 +159,15 @@
                     <button class="clear-filter">Clear Filter</button>
                 </div>
             </div>
+            <div class="row catchment-filter">
+                <div class="col-lg-12 subtitle">
+                    CATCHMENT AREA
+                </div>
+            </div>
+            <div class="row" id="filter-catchment-area-wrapper" style="display: none">
+                <div class="col-lg-12 filter-content" id="filter-catchment-area">
+                </div>
+            </div>
         </div>
     </script>
 
