--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -74,7 +74,7 @@ html, body, .map, .map-wrapper, #map-container {
     position: absolute;
     height: 100%;
     width: 250px;
-
+    pointer-events: none;
 }
 
 .right-panel {
@@ -91,6 +91,7 @@ html, body, .map, .map-wrapper, #map-container {
     -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2); /* Firefox 3.5 - 3.6 */
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2); /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
     border-radius: 0;
+    pointer-events: auto;
 }
 
 .title-side-panel {
