--- a/bims/templates/healthyrivers-map.html
+++ b/bims/templates/healthyrivers-map.html
@@ -48,8 +48,8 @@
                             <table>
                                 <tr>
                                     <td><img src="{% static 'img/fish-2.svg' %}" height="100px"></td>
-                                    <td><img src="{% static 'img/aquatic-invertebrates.svg' %}" height="100px"></td>
-                                    <td><img src="{% static 'img/algae.svg' %}" height="100px"></td>
+                                    <td><img src="{% static 'img/invertebras-2.svg' %}" height="100px"></td>
+                                    <td><img src="{% static 'img/algae-2.svg' %}" height="100px"></td>
                                 </tr>
                                 <tr>
                                     <td><canvas id="fish-graph" width="50px" height="50px"></canvas></td>
