--- a/bims/templates/main_base.html
+++ b/bims/templates/main_base.html
@@ -52,7 +52,7 @@
                         <li><a class="nav-link js-scroll-trigger" href="/">HOME</a></li>
                         <li><a class="nav-link js-scroll-trigger" href="/map">MAP</a></li>
                         <li><a class="nav-link js-scroll-trigger" id="navbar-ext-resources" href="{% url 'link_list' %}">LINKS</a></li>
-                        <li><a class="nav-link js-scroll-trigger" href="/tracking/">USAGE
+                        <li><a class="nav-link js-scroll-trigger" href="/tracking/">SITE
                             STATISTICS</a></li>
                         <li><a class="nav-link js-scroll-trigger" id="navbar-doc-report" href="/under-development/">DOCUMENTS & REPORTS</a></li>
                         <li><a class="nav-link js-scroll-trigger" id="navbar-contact" href="/contact/">CONTACT</a></li>
