--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -162,7 +162,7 @@
             </div>
             <div class="row sub-filter">
                 <div class="col-lg-12 subtitle">
-                    CATCHMENT AREA <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
+                    ADMINISTRATIVE AREA <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
                 </div>
             </div>
             <div class="row" style="display: none">
