add pdf downloader ui

--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -418,6 +418,9 @@
                                     <td valign="middle">
                                         <div class="row-format" data-format="csv">.csv</div>
                                     </td>
+                                    <td valign="middle">
+                                        <div class="row-format" data-format="pdf">PDF report</div>
+                                    </td>
                                 </tr>
                             </table>
                         </div>
