--- a/bims/templates/healthyrivers-map.html
+++ b/bims/templates/healthyrivers-map.html
@@ -57,9 +57,9 @@
                                     <td><canvas id="algae-graph" width="50px" height="50px"></canvas></td>
                                 </tr>
                                 <tr>
-                                    <td><span class="endemic-title">EN</span><span class="endemic-total">43</span></td>
-                                    <td><span class="endemic-title">EN</span><span class="endemic-total">12</span></td>
-                                    <td><span class="endemic-title">EN</span><span class="endemic-total">4</span></td>
+                                    <td><span class="endemic-title">EN</span><span id="fish-endemic-num" class="endemic-total">0</span></td>
+                                    <td><span class="endemic-title">EN</span><span id="invertebrates-endemic-num" class="endemic-total">0</span></td>
+                                    <td><span class="endemic-title">EN</span><span id="algae-endemic-num" class="endemic-total">0</span></td>
                                 </tr>
                                 <tr>
                                     <td><canvas id="fish-calculation-graph" width="50px" height="50px"></canvas></td>
