--- a/bims/templates/healthyrivers-map.html
+++ b/bims/templates/healthyrivers-map.html
@@ -47,9 +47,9 @@
                         <div class="col-lg-12" style="padding: 0">
                             <table>
                                 <tr>
-                                    <td><img src="{% static 'img/fish-2.svg' %}" height="100px"></td>
-                                    <td><img src="{% static 'img/invertebras-2.svg' %}" height="100px"></td>
-                                    <td><img src="{% static 'img/algae-2.svg' %}" height="100px"></td>
+                                    <td><img src="{% static 'img/fish-2.svg' %}" height="100px"><br/><span id="fish-occurence-count">0</span></td>
+                                    <td><img src="{% static 'img/invertebras-2.svg' %}" height="100px"><br/><span id="invertebra-occurence-count">0</span></td>
+                                    <td><img src="{% static 'img/algae-2.svg' %}" height="100px"><br/><span id="algae-occurence-count">0</span></td>
                                 </tr>
                                 <tr>
                                     <td><canvas id="fish-graph" width="50px" height="50px"></canvas></td>
@@ -57,9 +57,9 @@
                                     <td><canvas id="algae-graph" width="50px" height="50px"></canvas></td>
                                 </tr>
                                 <tr>
-                                    <td><span class="endemic-title">EN</span><span id="fish-endemic-num" class="endemic-total">0</span></td>
-                                    <td><span class="endemic-title">EN</span><span id="invertebrates-endemic-num" class="endemic-total">0</span></td>
-                                    <td><span class="endemic-title">EN</span><span id="algae-endemic-num" class="endemic-total">0</span></td>
+                                    <td><span class="endemic-title">EN</span><span id="fish-endemic-num" class="endemic-total">43</span></td>
+                                    <td><span class="endemic-title">EN</span><span id="invertebrates-endemic-num" class="endemic-total">12</span></td>
+                                    <td><span class="endemic-title">EN</span><span id="algae-endemic-num" class="endemic-total">4</span></td>
                                 </tr>
                                 <tr>
                                     <td><canvas id="fish-calculation-graph" width="50px" height="50px"></canvas></td>
